# renm

./: .gitignore  CMakeLists.txt  README.md
doc/: changelog.txt  report_2024-03-27.md
src/: main.cxx
test/: run.py  run.sh
